[metadata]
name = metabbo
version = 0.0.1
author = Koki Kitai
author_email = kitai.koki@gmail.com
description = Minimal interface required for surrogate models
url = https://github.com/k-kitai/metabbo
project_urls =
license=MIT License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
